// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render error when upload fails from elasticsearch request failure 1`] = `
<Provider
  services={
    Object {
      "settings": Object {
        "get": [MockFunction],
      },
      "theme": Object {
        "theme$": [MockFunction],
      },
      "uiSettings": Object {
        "get": [MockFunction],
      },
    }
  }
>
  <EuiCallOut
    color="danger"
    data-test-subj="fileUploadStatusCallout"
    iconType="warning"
    title="Unable to upload file"
  >
    <p>
      Error: simulated elasticsearch request failure
    </p>
  </EuiCallOut>
  <EuiFlexGroup
    alignItems="flexEnd"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiTitle
        size="xxs"
      >
        <h4>
          Import response
        </h4>
      </EuiTitle>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiCopy
        afterMessage="Copied"
        textToCopy="{
  \\"success\\": false,
  \\"docCount\\": 10,
  \\"error\\": {
    \\"error\\": {
      \\"reason\\": \\"simulated elasticsearch request failure\\"
    }
  }
}"
      >
        <Component />
      </EuiCopy>
    </EuiFlexItem>
  </EuiFlexGroup>
  <div
    style={
      Object {
        "height": "200px",
      }
    }
  >
    <CodeEditor
      languageId="json"
      options={
        Object {
          "automaticLayout": true,
          "fontSize": 12,
          "lineNumbers": "off",
          "minimap": Object {
            "enabled": false,
          },
          "readOnly": true,
          "scrollBeyondLastLine": false,
          "wordWrap": "on",
          "wrappingIndent": "indent",
        }
      }
      value="{
  \\"success\\": false,
  \\"docCount\\": 10,
  \\"error\\": {
    \\"error\\": {
      \\"reason\\": \\"simulated elasticsearch request failure\\"
    }
  }
}"
    />
  </div>
  <EuiSpacer
    size="m"
  />
</Provider>
`;

exports[`Should render error when upload fails from http request timeout 1`] = `
<Provider
  services={
    Object {
      "settings": Object {
        "get": [MockFunction],
      },
      "theme": Object {
        "theme$": [MockFunction],
      },
      "uiSettings": Object {
        "get": [MockFunction],
      },
    }
  }
>
  <EuiCallOut
    color="danger"
    data-test-subj="fileUploadStatusCallout"
    iconType="warning"
    title="Unable to upload file"
  >
    <p>
      Error: simulated http request timeout
    </p>
  </EuiCallOut>
  <EuiFlexGroup
    alignItems="flexEnd"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiTitle
        size="xxs"
      >
        <h4>
          Import response
        </h4>
      </EuiTitle>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiCopy
        afterMessage="Copied"
        textToCopy="{
  \\"success\\": false,
  \\"docCount\\": 10,
  \\"error\\": {
    \\"body\\": {
      \\"message\\": \\"simulated http request timeout\\"
    }
  }
}"
      >
        <Component />
      </EuiCopy>
    </EuiFlexItem>
  </EuiFlexGroup>
  <div
    style={
      Object {
        "height": "200px",
      }
    }
  >
    <CodeEditor
      languageId="json"
      options={
        Object {
          "automaticLayout": true,
          "fontSize": 12,
          "lineNumbers": "off",
          "minimap": Object {
            "enabled": false,
          },
          "readOnly": true,
          "scrollBeyondLastLine": false,
          "wordWrap": "on",
          "wrappingIndent": "indent",
        }
      }
      value="{
  \\"success\\": false,
  \\"docCount\\": 10,
  \\"error\\": {
    \\"body\\": {
      \\"message\\": \\"simulated http request timeout\\"
    }
  }
}"
    />
  </div>
  <EuiSpacer
    size="m"
  />
</Provider>
`;

exports[`Should render success 1`] = `
<Provider
  services={
    Object {
      "settings": Object {
        "get": [MockFunction],
      },
      "theme": Object {
        "theme$": [MockFunction],
      },
      "uiSettings": Object {
        "get": [MockFunction],
      },
    }
  }
>
  <EuiCallOut
    data-test-subj="fileUploadStatusCallout"
    title="File upload complete"
  >
    <p>
      Indexed 10 features.
    </p>
  </EuiCallOut>
  <EuiFlexGroup
    alignItems="flexEnd"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiTitle
        size="xxs"
      >
        <h4>
          Import response
        </h4>
      </EuiTitle>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiCopy
        afterMessage="Copied"
        textToCopy="{
  \\"success\\": true,
  \\"docCount\\": 10
}"
      >
        <Component />
      </EuiCopy>
    </EuiFlexItem>
  </EuiFlexGroup>
  <div
    style={
      Object {
        "height": "200px",
      }
    }
  >
    <CodeEditor
      languageId="json"
      options={
        Object {
          "automaticLayout": true,
          "fontSize": 12,
          "lineNumbers": "off",
          "minimap": Object {
            "enabled": false,
          },
          "readOnly": true,
          "scrollBeyondLastLine": false,
          "wordWrap": "on",
          "wrappingIndent": "indent",
        }
      }
      value="{
  \\"success\\": true,
  \\"docCount\\": 10
}"
    />
  </div>
  <EuiSpacer
    size="m"
  />
  <EuiFlexGroup
    alignItems="flexEnd"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiTitle
        size="xxs"
      >
        <h4>
          Data view response
        </h4>
      </EuiTitle>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiCopy
        afterMessage="Copied"
        textToCopy="{}"
      >
        <Component />
      </EuiCopy>
    </EuiFlexItem>
  </EuiFlexGroup>
  <div
    style={
      Object {
        "height": "200px",
      }
    }
  >
    <CodeEditor
      languageId="json"
      options={
        Object {
          "automaticLayout": true,
          "fontSize": 12,
          "lineNumbers": "off",
          "minimap": Object {
            "enabled": false,
          },
          "readOnly": true,
          "scrollBeyondLastLine": false,
          "wordWrap": "on",
          "wrappingIndent": "indent",
        }
      }
      value="{}"
    />
  </div>
  <EuiSpacer
    size="m"
  />
  <EuiText>
    <p>
      <MemoizedFormattedMessage
        defaultMessage="To modify the index, go to "
        id="xpack.fileUpload.importComplete.indexModsMsg"
      />
      <a
        data-test-subj="indexManagementNewIndexLink"
        href="abc/app/management/data/index_management/indices"
        target="_blank"
      >
        <MemoizedFormattedMessage
          defaultMessage="Index Management."
          id="xpack.fileUpload.importComplete.indexMgmtLink"
        />
      </a>
    </p>
  </EuiText>
</Provider>
`;

exports[`Should render warning when some features failed import 1`] = `
<Provider
  services={
    Object {
      "settings": Object {
        "get": [MockFunction],
      },
      "theme": Object {
        "theme$": [MockFunction],
      },
      "uiSettings": Object {
        "get": [MockFunction],
      },
    }
  }
>
  <EuiCallOut
    color="warning"
    data-test-subj="fileUploadStatusCallout"
    iconType="help"
    title="File upload complete with failures"
  >
    <p>
      Unable to index 1 of 10 features.
    </p>
  </EuiCallOut>
  <EuiFlexGroup
    alignItems="flexEnd"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiTitle
        size="xxs"
      >
        <h4>
          Import response
        </h4>
      </EuiTitle>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiCopy
        afterMessage="Copied"
        textToCopy="{
  \\"success\\": true,
  \\"docCount\\": 10,
  \\"failures\\": [
    {
      \\"item\\": 1,
      \\"reason\\": \\"simulated feature import failure\\",
      \\"doc\\": {}
    }
  ]
}"
      >
        <Component />
      </EuiCopy>
    </EuiFlexItem>
  </EuiFlexGroup>
  <div
    style={
      Object {
        "height": "200px",
      }
    }
  >
    <CodeEditor
      languageId="json"
      options={
        Object {
          "automaticLayout": true,
          "fontSize": 12,
          "lineNumbers": "off",
          "minimap": Object {
            "enabled": false,
          },
          "readOnly": true,
          "scrollBeyondLastLine": false,
          "wordWrap": "on",
          "wrappingIndent": "indent",
        }
      }
      value="{
  \\"success\\": true,
  \\"docCount\\": 10,
  \\"failures\\": [
    {
      \\"item\\": 1,
      \\"reason\\": \\"simulated feature import failure\\",
      \\"doc\\": {}
    }
  ]
}"
    />
  </div>
  <EuiSpacer
    size="m"
  />
  <EuiFlexGroup
    alignItems="flexEnd"
    justifyContent="spaceBetween"
  >
    <EuiFlexItem
      grow={false}
    >
      <EuiTitle
        size="xxs"
      >
        <h4>
          Data view response
        </h4>
      </EuiTitle>
    </EuiFlexItem>
    <EuiFlexItem
      grow={false}
    >
      <EuiCopy
        afterMessage="Copied"
        textToCopy="{}"
      >
        <Component />
      </EuiCopy>
    </EuiFlexItem>
  </EuiFlexGroup>
  <div
    style={
      Object {
        "height": "200px",
      }
    }
  >
    <CodeEditor
      languageId="json"
      options={
        Object {
          "automaticLayout": true,
          "fontSize": 12,
          "lineNumbers": "off",
          "minimap": Object {
            "enabled": false,
          },
          "readOnly": true,
          "scrollBeyondLastLine": false,
          "wordWrap": "on",
          "wrappingIndent": "indent",
        }
      }
      value="{}"
    />
  </div>
  <EuiSpacer
    size="m"
  />
  <EuiText>
    <p>
      <MemoizedFormattedMessage
        defaultMessage="To modify the index, go to "
        id="xpack.fileUpload.importComplete.indexModsMsg"
      />
      <a
        data-test-subj="indexManagementNewIndexLink"
        href="abc/app/management/data/index_management/indices"
        target="_blank"
      >
        <MemoizedFormattedMessage
          defaultMessage="Index Management."
          id="xpack.fileUpload.importComplete.indexMgmtLink"
        />
      </a>
    </p>
  </EuiText>
</Provider>
`;
